# ci

./: .coveragerc  main.yml  pyproject.toml  pytest.ini  readme.md
.github/workflows/: main.yml
app/blog/: views.py
app/blog/migrations/: 0001_initial.py
app/config/: settings.py  urls.py
